# mc-c-client

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  README.md
include/: bot.h  cJSON.h  compression.h  encryption.h  network.h  p_string.h  packet.h  player.h  session.h  socket.h  varint.h
libs/ProtocolTypes/: CMakeLists.txt
libs/ProtocolTypes/include/: protocol_string.h  varint.h
libs/ProtocolTypes/src/: protocol_string.c  varint.c
libs/cJSON/: CMakeLists.txt
src/: cJSON.c  cJSON.cpp  compression.c  compression.cpp  encryption.c  encryption.cpp  main.c  main.cpp  network.c  p_string.c  p_string.cpp  packet.c  packet.cpp  socket.c  socket.cpp  varint.c  varint2.c
tests/ProtocolTypes/: CMakeLists.txt  testprotocol_string.c
